--- a/OHURLLoader/README
+++ b/OHURLLoader/README
@@ -2,12 +2,6 @@ This class make it easier to perform URL requests by using blocks (A new feature
 
 To use it, you simply have to use one of the three constructor methods, providing the NSURLRequest to perform and the blocks of code to execute on success and on error.
 
-If you want to, you can also provide blocks of code to execute when receiving each chunk of data, to be notified of the progress of the download. This can be useful for long downloads, for example to update a progressbar on the screen.
-If needed, you may also provide a block of code to execute when the response header is received, at which stage you are able to known the expectedContentLength or the MimeType of the response (and some other headers).
-
-
-Usage example:
-
 	NSURL* url = ...
 	NSURLRequest* req = [NSURLRequest requestWithURL:url];
 
@@ -16,5 +10,9 @@ Usage example:
 	} errorHandler:^(NSError *error) {
 		outputTextView.text = [error localizedDescription]; // Error
 	}];
+
+If you want to, you can also provide blocks of code to execute when receiving each chunk of data, to be notified of the progress of the download. This can be useful for long downloads, for example to update a progressbar on the screen.
+You may also provide a block of code to execute when the response header is received, at which stage you are able to known the expectedContentLength or the MimeType of the response (and some other headers).
+
 
 For a more detailed usage example, see the example project in the "OHURLLoader Example" folder
