--- a/OHURLLoader/README
+++ b/OHURLLoader/README
@@ -1,4 +1,7 @@
-This class make it easier to perform URL requests by using blocks (A new feature/syntax introduced with GCD in OSX 10.6 and iOS4)
+This class make it easier to perform URL requests by using blocks.
+
+NOTE: blocks are a new feature introduced in OSX 10.6 and iOS 4.0. For this reason, this class is not compatible with earlier OSX and iOS versions.
+
 
 To use it, you simply have to use one of the three constructor methods, providing the NSURLRequest to perform and the blocks of code to execute on success and on error.
 
@@ -12,6 +15,7 @@ To use it, you simply have to use one of the three constructor methods, providin
 	}];
 
 If you want to, you can also provide blocks of code to execute when receiving each chunk of data, to be notified of the progress of the download. This can be useful for long downloads, for example to update a progressbar on the screen.
+
 You may also provide a block of code to execute when the response header is received, at which stage you are able to known the expectedContentLength or the MimeType of the response (and some other headers).
 
 
